--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-
-      
-      
-      -app"
+      content="Ordulu Bilgi Teknolojileri"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
